Bug 182128 Edit Card, Notes on several lines appear on one after export/import in text format (txt, tab, csv). r=Neil,sr=bienvenu