mailnews/addrbook/src/nsAddressBook.cpp
@@ -607,32 +607,17 @@ nsAddressBook::ExportDirectoryToDelimitedText(nsIAbDirectory *aDirectory, const 
               if (!needsQuotes && (newValue.FindChar(',') != kNotFound || newValue.FindChar('\x09') != kNotFound))
                 needsQuotes = PR_TRUE;
 
+              // Make sure we quote if containing CR/LF.
+              if (newValue.FindChar(nsCRT::CR) != kNotFound ||
+                  newValue.FindChar(nsCRT::LF) != kNotFound)
+                  needsQuotes = PR_TRUE;
+
               if (needsQuotes)
               {
                 newValue.Insert(NS_LITERAL_STRING("\""), 0);
                 newValue.AppendLiteral("\"");
               }
 
-              // For notes, make sure CR/LF is converted to spaces 
-              // to avoid creating multiple lines for a single card.
-              //
-              // the import code expects .txt, .tab, .csv files to
-              // have non-ASCII data in the system charset
-              //
-              // note, this means if you machine is set to US-ASCII
-              // but you have cards with Japanese characters
-              // you will lose data when exporting.
-              //
-              // the solution is to export / import as LDIF.
-              // non-ASCII data is treated as base64 encoded UTF-8 in LDIF
-              if (!strcmp(EXPORT_ATTRIBUTES_TABLE[i].abColName, kNotesColumn))
-              {
-                if (!newValue.IsEmpty())
-                {
-                  newValue.ReplaceChar(nsCRT::CR, ' ');
-                  newValue.ReplaceChar(nsCRT::LF, ' ');
-                }
-              }
               rv = importService->SystemStringFromUnicode(newValue.get(), valueCStr);
 
               if (NS_FAILED(rv)) {
